<resources>
    <string name="app_name">CoEdit</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title">Title</string>
    <string name="shared_note">Shared note</string>
    <string name="folder">Folder</string>
    <string name="group">Group</string>
    <string name="text_styles">Text styles</string>
    <string name="checkbox">Checkbox</string>
    <string name="add_image">Add image</string>
    <string name="choose_theme">Choose theme</string>
</resources>