<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lines"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.note.NoteActivity">



        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="11sp"
            app:layout_constraintEnd_toStartOf="@id/time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="02/09" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/date"
            app:layout_constraintBottom_toBottomOf="@id/date"
            app:layout_constraintStart_toEndOf="@id/date"

            tools:text="18:15"/>

        <ImageView
            android:id="@+id/shared"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/group"
            android:src="@drawable/ic_baseline_group_24"
            app:layout_constraintBottom_toBottomOf="@+id/folder_spinner"
            app:layout_constraintEnd_toStartOf="@+id/folder_spinner"
            app:layout_constraintTop_toTopOf="@+id/folder_spinner" />

        <Spinner
            android:id="@+id/folder_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/ic_baseline_folder_24"
            android:prompt="@string/folder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:background="@null"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/folder_spinner"
            tools:ignore="LabelFor" />

        <com.example.coedit.ui.note.LinedEditText
            android:id="@+id/text_et"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:background="@null"
            android:gravity="top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textCapSentences"
            android:text='@{lines}'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_et"
            tools:ignore="LabelFor"
            tools:text="f\nsecond" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>